@@ -2,6 +2,11 @@ Revision history for DBD::Oracle
 
 {{$NEXT}}
 
+  [ENHANCMENT]
+
+  Connection informational messages like "ORA-28002: the password will
+  expire" were lost. Thanks to J.D. Laub.
+
 1.75_2    2014-11-19
 
   [ENHANCEMENT]
